[package]
name = "tera_statistics_analysis"
version = "0.1.0"
authors = ["user"]

[dependencies]
rust-lzma = "0"
serde_json = "1.0"
docopt = "0.8"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
rusqlite = "0.13"
time = "0.1"
r2d2	= "0.8"
r2d2_sqlite	= "0.5"
glob = "0.2"
threadpool = "1.7"
