[package]
name = "tera_statistics_analyser"
version = "0.1.0"
authors = ["neowutran"]

[dependencies]
serde_json = "1.0"
docopt = "0.8"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
glob = "0.2"
threadpool = "1.7"
chrono = "0.4"
num_cpus = "1"
xz2 = "0.1"
